@@ -67,6 +67,7 @@ Beautiful Soup, by contrast, only changes the source when absolutely needed to m
 - fixed issue where backlinks required an id set on the original element
 - HTML5 `wbr` tags (line break opportunity) are removed for EPUB2
 - Ebookmaker is phasing out the use of Kindlegen, which has been unsupported for a while by Amazon. While kindlegen can still be specified as the converter app in the config file, Calibre is now the default conversion app. the generated EPUB2 file is used as the source for MOBI (version 6) files, while EPUB3 files are used as the source for MOBI (KF8 format) files.
+- fixed bug where dangling references were created by `x-ebookmaker-drop`
 
 0.11.30 December 10, 2021
 - for EPUB, down-convert HTML5 tags to divs so the files validate as EPUB2. The new div elements will add a class named the same as the html5 tag, so `<section>` becomes `<div class="section">`. Other attributes are preserved. In addition CSS selectors involving these elements will be transformed accordingly: for example `section` becomes `div.section`
